--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
 	"name": "miyojs-filter-variables",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"description": "variables - provides convenient serializable variables for Miyo",
+	"keywords": ["miyojs", "miyojs-filter"],
 	"main": "variables.js",
 	"scripts": {
 		"test": "mocha"
 	},
 	"dependencies": {
+	},
+	"devDependencies": {
+		"coffee-script": ">= 1.8.0",
+		"mocha": ">= 1.20.1",
+		"chai": ">= 1.9.2",
+		"sinon": ">= 1.10.3",
+		"istanbul": ">= 0.3.2",
+		"miyojs": ">= 1.0.3"
 	},
 	"author": {
 		"name": "narazaka",
