--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "miyojs-filter-variables",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"description": "variables - provides convenient serializable variables for Miyo",
 	"keywords": ["miyojs", "miyojs-filter"],
 	"main": "variables.js",
@@ -15,7 +15,8 @@
 		"chai": ">= 1.9.2",
 		"sinon": ">= 1.10.3",
 		"istanbul": ">= 0.3.2",
-		"miyojs": ">= 1.0.3"
+		"miyojs": ">= 1.0.3",
+		"miyojs-filter-property": ">= 1.0.0"
 	},
 	"author": {
 		"name": "narazaka",
